--- a/store.css
+++ b/store.css
@@ -15,7 +15,7 @@ header {
 }
 
 .bannerImg {
-  background-image: url('storeBanner.jpg');
+  background-image: url('./assets/storeBanner.jpg');
   height: 100%;
 
   background-position: center;
