--- a/store.css
+++ b/store.css
@@ -1,4 +1,3 @@
-
 html,
 body {
   height: 100%;
@@ -11,11 +10,11 @@ html {
 
 /* HEADER */
 header {
-  background-color: rgb(12,168,158);
+  background-color: rgb(12, 168, 158);
 }
 
 .bannerImg {
-  background-image: url('./assets/storeBanner.jpg');
+  background-image: url("./assets/storeBanner.jpg");
   height: 100%;
 
   background-position: center;
@@ -56,7 +55,7 @@ img {
 .icons img {
   border-radius: 50%;
   max-width: 80%;
-  max-height: 80%
+  max-height: 80%;
 }
 
 .icons img:hover {
@@ -64,22 +63,20 @@ img {
 }
 
 #pikachuIcon img {
-  background-color: #FFF7B6;
+  background-color: #fff7b6;
 }
 
 #charizardIcon img {
-  background-color: #FFCF79;
+  background-color: #ffcf79;
 }
 
 #squirtleIcon img {
-  background-color: #9FE7FF;
+  background-color: #9fe7ff;
 }
 
 #eeveeIcon img {
-  background-color: #DDB697;
+  background-color: #ddb697;
 }
-
-
 
 /* Product Border */
 .product {
@@ -121,7 +118,6 @@ img {
     height: 250px;
   }
 }
-
 
 /* Text Box */
 .titleBox {
@@ -194,8 +190,6 @@ img {
   }
 }
 
-
-
 /* Buy Button */
 
 .buyBox {
@@ -203,11 +197,11 @@ img {
 }
 
 .buyBox button:hover {
-  transition: transform .2s;
+  transition: transform 0.2s;
   transform: scale(1.1);
 }
 
 /* Footer */
-footer{
+footer {
   margin-top: 20px;
 }
